--- a/app/src/main/res/layout/mainlayout.xml
+++ b/app/src/main/res/layout/mainlayout.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:theme="@style/ThemeForToolbar">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_in_main"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeForToolbar"/>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@android:id/list"
+        android:id="@+id/list"
         android:layout_gravity="center_horizontal" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/missing_text"
+        android:text="@string/loading_text"
         android:id="@android:id/empty"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
